Changed the git config to my git details

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-	name = Squareweave Ninja
-	email = ninjas@squareweave.com.au
+	name = Sebastian Sibelle
+	email = sebastiansibelle@gmail.com
 
 [alias]
 	# View the SHA, description, and history graph of the latest 20 commits
